--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
             Hello, Belibu<br><br>
             Sé que estás cansadita… y justo por eso quería decirte esto. Te aprecio demasiado, de verdad. Gracias por escucharme ayer… y gracias, sobre todo, por ser como sos.<br><br>
             Me quedé pensando en vos: te levantás temprano, para trabajar. Eso no es fácil, y vos lo haces con una fuerza tranquila que me impresiona. La verdad ayer sude frio si me dijistes que me hechabas la culpa sino te levantabas. La verdad, la pase algo bonito esa noche y mas que conozco por primera vez una cristina<br><br>
-            Solo quería que supieras que sí te veo.
+            Solo quería que supieras eso.
         </div>
         <button class="reset-btn" onclick="showQuestion()">
             Siguiente
